# centaur

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CONTEXT.md  Dockerfile  Justfile  README.md  docker-compose.yml  index.yaml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  slack-app-manifest.yml
.beads/: config.yaml  issues.jsonl  metadata.json
.github/workflows/: ci.yml  console-ci.yml  darkmatter-images.yml  deploy.yml  docker-image.yml  docs.yml  publish-images.yml  release-chart.yml  sync-upstream.yml
apps/slackbot/: Dockerfile  entrypoint.sh  package-lock.json  package.json
apps/usage/: app.js  data.json  index.html  serve.py  style.css
apps/web/: entrypoint.sh  eslint.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
centaur_sdk/: tool_sdk.py
centaur_sdk/centaur_sdk/: logging.py  toolrunner.py
centaur_sdk/tests/: test_toolrunner.py
contrib/chart/: Chart.yaml  test-app-pod-security-context.sh  test-slackbot-database-secret-key.sh  values.dev.yaml  values.schema.json  values.yaml
contrib/scripts/: bootstrap-k8s-secrets.sh
crates/harness-server/: Cargo.toml
docs/: 1password-setup.md  package-lock.json  package.json  sidebar.ts  styles.css  toon-token-efficiency.md  vocs.config.ts  wrangler.jsonc
docs/pages/: _root.css  contributing.mdx  deploying-in-production.mdx  first-call.mdx  learning-path.mdx  quickstart.mdx  setup.mdx  what-is-centaur.mdx
docs/scripts/: build-static-deploy.mjs  prepare-docs-route.mjs
e2e/deploy/: create-ci-secrets.sh  run-kind.sh
e2e/scenarios/: slackbot-steering-stop.e2e.test.ts
harness/codex/: config.toml
harness/omp/: config.yml  models.yml
local-corpus/slackbot-fuzz/: INDEX.md  REGRESSION_MATRIX.md  api-rs-regression-check-20260602T1702Z.json  regression-matrix.json
monitoring/: nginx.conf  prometheus.yml
patches/: @chat-adapter__slack@4.30.0.patch
plugins/agent/: Dockerfile  entrypoint.sh
sandbox/: Dockerfile  SYSTEM_PROMPT.md  SYSTEM_PROMPT_ENG.md  call.sh  entrypoint.sh
scripts/: auth-bootstrap.js  build_slackbot_regression_matrix.py  deploy-notify.sh  migrate-secrets-to-1pw.sh  rename-vault-items.py
services/alloy/: config.alloy
services/api/: Dockerfile  conftest.py  entrypoint.sh  pyproject.toml
services/api-rs/: Cargo.toml  Dockerfile  Justfile
services/auth/: main.py
services/collab-relay/: Dockerfile  README.md  package.json  tsconfig.json
services/console/: README.md
services/discordbot/: package.json
services/firewall/: addon.py
services/firewall-manager/: manager.py
services/fluentbit/: fluent-bit.conf  parsers.conf
services/iron-proxy/: Dockerfile  entrypoint.sh
services/mitm/: Dockerfile  addon.py  entrypoint.sh
services/nginx/: entrypoint.sh  nginx.conf
services/omp-stats/: Dockerfile  README.md  package.json  tsconfig.json
services/sandbox/: Dockerfile  Dockerfile.thin  SYSTEM_PROMPT.md  amp-wrapper.sh  call.sh  claude-app-wrapper.py  codex-app-wrapper.py  collect-tool-deps.py  entrypoint.sh  gh-observed.sh  gh-wrapper.sh  git-branch.sh  git-observed.sh  harness_adapter.py  install_tool_shims.py  instruction-observer.py  mint-github-token.mjs  test_install_tool_shims.py  test_omp_config.py
services/slackbot/: package.json  slack-app-manifest.yml
services/slackbotv2/: package.json
services/web/: AGENTS.md  Dockerfile  entrypoint.sh  next.config.ts
src/api/: agent.py  api_keys.py  (+4 more)
tests/: test_darkmatter_crm.py  test_firewall_addon.py
tools/: README.md  test_tool_metadata.py
tools/business/interview-prep/: .env.example  pyproject.toml  test_client.py
tools/business/interview-prep/centaur_tool_interview_prep/: __init__.py  cli.py  client.py
tools/crypto/coindesk/: client.py  pyproject.toml
tools/crypto/mpp/: pyproject.toml
tools/darkmatter_crm/: __init__.py  cli.py  client.py  pyproject.toml
tools/research/preqin/: pyproject.toml
tools/research/preqin/centaur_tool_preqin/: client.py
tools/research/preqin/tests/: test_client.py
workflows/: company_context_documents.py  daily_darkmatter_brief.py  overnight_research.py  paradigm_pulse_daily.py  policy_news_monitor.py  post_meeting_summary.py  pre_meeting_brief.py  restart_survival_demo.py  room_conflict_monitor.py  slack_backfill.py  slack_sync.py  usage_stats.py  weekly_usage_report.py
(+724 files in other folders)
