[project]
name = "darkmatter-crm"
version = "0.1.0"
description = "Example Centaur overlay CRM tool"
requires-python = ">=3.11"
license = "Apache-2.0 OR MIT"
dependencies = ["click>=8.1.7"]

[project.scripts]
darkmatter-crm = "centaur_tool_darkmatter_crm.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.build.targets.wheel.sources]
"." = "centaur_tool_darkmatter_crm"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
