[project]
name = "mpp"
description = "Market data via MPP (Machine Payments Protocol) — token prices, web search, on-chain data, trending tokens, wallet balances, and Dune SQL queries. Paid per-query with Tempo stablecoins."
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "centaur_sdk",
]

[tool.centaur]
module = "client.py"
agent_facing = false
secrets = [
    {type = "http", name = "MPP_PRIVATE_KEY", match_headers = ["X-MPP-Key"], hosts = [
        "parallelmpp.dev",
        "coingecko.mpp.paywithlocus.com",
        "graph.codex.io",
        "agents.allium.so",
        "api.dune.com",
    ]},
]
