[project]
name = "preqin"
description = "Preqin Operational API and Feeds API client for fund and fund-manager data"
version = "0.1.1"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "typer>=0.12.0",
]

[project.scripts]
preqin = "centaur_tool_preqin.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["centaur_tool_preqin"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.centaur]
module = "client.py"
hosts = ["api.preqin.com", "id.preqin.com", "feeds.preqin.com"]
# Preqin's /connect/token does not use a standard OAuth2 grant - it expects the
# form fields `Username` and `APIKey` (no grant_type/password/client_id), which
# the oauth_token proxy type cannot express. So we expose the raw secrets and let
# the client mint the bearer token itself (see client.py _operational_access_token).
secrets = ["PREQIN_USERNAME", "PREQIN_API_KEY"]
